--- a/src/UserListCleaner/packages.config
+++ b/src/UserListCleaner/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net461" />
+  <package id="GitVersionTask" version="3.6.5" targetFramework="net461" developmentDependency="true" />
   <package id="NLog" version="4.4.12" targetFramework="net461" />
   <package id="NLog.Config" version="4.4.12" targetFramework="net461" />
   <package id="NLog.Schema" version="4.4.12" targetFramework="net461" />
